Rewrote NetworkProtocolAPI and NetworkTypeAPI into respective models.
